--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-helmet": "^5.2.0",
-    "react-icons": "^3.2.2"
+    "react-icons": "^3.2.2",
+    "react-structured-data": "0.0.11"
   },
   "keywords": [
     "gatsby"
