--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^16.6.3",
     "react-helmet": "^5.2.0",
     "react-icons": "^3.2.2",
+    "react-scroll": "^1.7.10",
     "react-structured-data": "0.0.11"
   },
   "keywords": [
