--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gatsby-plugin-sass": "^2.0.7",
     "gatsby-plugin-sharp": "^2.0.14",
     "gatsby-source-filesystem": "^2.0.8",
+    "gatsby-source-medium": "^2.0.2",
     "gatsby-transformer-sharp": "^2.1.8",
     "node-sass": "^4.11.0",
     "react": "^16.6.3",
@@ -21,7 +22,10 @@
     "react-helmet": "^5.2.0",
     "react-icons": "^3.2.2",
     "react-scroll": "^1.7.10",
-    "react-structured-data": "0.0.11"
+    "react-slick": "^0.23.2",
+    "react-structured-data": "0.0.11",
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^4.1.2"
   },
   "keywords": [
     "gatsby"
