--- a/package.json
+++ b/package.json
@@ -22,9 +22,7 @@
     "react-icons": "^5.2.1",
     "react-scroll": "^1.9.0",
     "react-slick": "^0.30.2",
-    "slick-carousel": "^1.8.1",
-    "styled-components": "^6.1.11",
-    "yet-another-react-lightbox": "^3.21.1"
+    "styled-components": "^6.1.11"
   },
   "devDependencies": {
     "prettier": "^2.8.8"
